--- a/.github/workflows/多号签到.yml
+++ b/.github/workflows/多号签到.yml
@@ -1,13 +1,13 @@
 name: 多号签到
 
 
-#on:
+on:
   
   #push: # push触发
     #branches: [ main ]
-  #workflow_dispatch: # 手动触发
-  #schedule: # 计划任务触发
-    #- cron: '0 4,12 * * *' # cron表达式，Actions时区是UTC时间，所以要往前推8个小时(4-23)
+  workflow_dispatch: # 手动触发
+  schedule: # 计划任务触发
+    - cron: '0 4,12 * * *' # cron表达式，Actions时区是UTC时间，所以要往前推8个小时(4-23)
     
 
 jobs:
